# rust-autocomplete-api

./: .dockerignore  .gitignore  Cargo.toml  Dokerfile  README.md
resources/: weighted_strings.txt
src/: main.rs
