[package]
name = "autocomplete-api-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
tokio ={ version = "1.16.1", features = ["full"] }
warp = "0.3.2"
multimap = "0.8.3"
lazy_static = "1.4.0"